# CareerLens

./: .env.example  .gitignore  .vercelignore  DEPLOYMENT_SUMMARY.md  README.md  README_DEPLOYMENT.md  VERCEL_DEPLOYMENT_CHECKLIST.md  logs_result.csv  pyproject.toml  requirements.txt  vercel.json
api/: app.py  index.py
backend/: app.py  config.py  models.py  run.py
backend/routes/: auth.py  coverletter.py  dashboard.py  resume.py
backend/services/: ai_service.py  parser.py  storage.py
backend/templates/: base.html  career_advice.html  coverletter.html  dashboard.html  home.html  login.html  resume_view.html  signup.html  upload.html
static/css/: styles.css
static/js/: main.js
